# spac2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/Client/: CMakeLists.txt  GameLoop.cpp  GameLoop.h  main.cpp
src/Client/ECS/Systems/: CMakeLists.txt  Starfield.cpp  Starfield.h
src/Client/Networking/: CMakeLists.txt  Client.cpp  Client.h  ConnectionManager.cpp  ConnectionManager.h  WebsocketClient.cpp  WebsocketClient.h
src/Client/Scenes/: CMakeLists.txt  Connecting.cpp  Connecting.h  Game.h  Menu.cpp  Menu.h  Scene.h  SceneManager.h
src/Common/: CMakeLists.txt
src/Common/ECS/: CMakeLists.txt  System.cpp  System.h
src/Common/ECS/include/: System.h
src/Common/Net/: CMakeLists.txt  Connection.h  packet_generated.h
src/Common/Networking/: CMakeLists.txt
src/Common/Networking/include/: packet_generated.h
src/Common/Protocol/: death.fbs  packet.fbs  perception.fbs  respawn.fbs
src/Server/: CMakeLists.txt  main.cpp
src/Server/ECS/: CMakeLists.txt
src/Server/ECS/Components/: CMakeLists.txt  EntityComponents.h  NetworkingComponents.cpp  NetworkingComponents.h  PerceptionComponents.h  PhysicsComponents.h  Session.cpp  Session.h  ShipComponents.h
src/Server/ECS/Networking/: CMakeLists.txt  WebsocketSession.cpp  WebsocketSession.h
src/Server/ECS/Systems/: BoosterSystem.cpp  BoosterSystem.h  CMakeLists.txt  CollisionsSystem.cpp  CollisionsSystem.h  DestructionSystem.cpp  DestructionSystem.h  LifetimeSystem.cpp  LifetimeSystem.h  NetworkingSystem.cpp  NetworkingSystem.h  PerceptionSystem.cpp  PerceptionSystem.h  PerceptionsSystem.cpp  PerceptionsSystem.h  RefuelSystem.cpp  RefuelSystem.h  ShieldSystem.cpp  ShieldSystem.h
src/Server/Networking/: WebsocketSession.h
src/Server/Utilities/: CollisionFlags.h  Constants.h  TaskQueue.h
